--- a/Front-end/oleole.html
+++ b/Front-end/oleole.html
@@ -36,33 +36,58 @@
 
 </head>
 
-<header class="masthead">
+<body class="masthead">
   <div class="container h-100">
     <div class="row h-100">
-      <div class="col-lg-5 my-auto">
-        <div class="device-container">
-            <h3>Featured</h3>
-            <hr>
-          <div class="text-center">
-          <a href="#start" class="btn btn-outline btn-xl">Start Your Own Room</a>
+      <div class="col-lg-5 my-auto listing-block rounded">
+          <h3>Featured</h3>
+        <div class="media">
+            <img class="d-flex align-self-start rounded" src="https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Generic placeholder image">
+              <div class="team">
+                  <p>Chelsea</p>
+                  <p> Manchester United</p>
+              </div>
+              <div class="status">
+                  <p>Now</p>
+              </div>
           </div>
-        </div>
-      </div>
+          <div class="media-title">
+            <h3>Other Matches</h3>
+          </div>
+          <div class="media">
+              <img class="d-flex align-self-start rounded" src="https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Generic placeholder image">
+                <div class="team">
+                    <p>Chelsea</p>
+                    <p> Manchester United</p>
+                </div>
+                <div class="status">
+                    <p>Now</p>
+                </div>
+            </div>
+            <div class="media">
+                <img class="d-flex align-self-start rounded" src="https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Generic placeholder image">
+                  <div class="team">
+                      <p>Chelsea</p>
+                      <p> Manchester United</p>
+                  </div>
+                  <div class="status">
+                      <p>Now</p>
+                  </div>
+              </div>
+              <div class="media-end text-center">
+                <a href="#start" class="btn btn-outline btn-xl">Start Your Own Room</a>
+             </div>
+           </div>
       <div class="col-lg-7 my-auto">
-        <div class="header-content mx-auto">
+        <div class="body-content mx-auto">
           <h1 class="mb-5">Sports should be enjoyed together!</h1>
         </div>
       </div>
     </div>
   </div>
-</header>
-
-
-
-<body>
     <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    <!-- Placed at the end of the document so the pages load faster --> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
     <script src="../../dist/js/bootstrap.min.js"></script>
