--- a/Front-end/createroom.html
+++ b/Front-end/createroom.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
     <link rel="icon" href="../../favicon.ico">
 
-        <title>OleOle</title>
+        <title>Create New Room</title>
 
         <!-- Bootstrap core CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
@@ -31,59 +31,45 @@
 
     <!-- Custom styles for this template -->
      <link href="oleole.css" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-     <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
      <link href="https://fonts.googleapis.com/css?family=Barlow:300,300i,400,400i,500,500i,600,600i" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Istok+Web" rel="stylesheet">
+     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+
 
 </head>
 
 <body class="masthead">
   <div class="container h-100">
     <div class="row h-100">
-      <div class="col-lg-5 my-auto listing-block rounded">
-          <h3>Featured</h3>
-        <div class="media">
-            <img class="d-flex align-self-start rounded" src="https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Generic placeholder image">
-              <div class="team">
-                  <p>Chelsea</p>
-                  <p> Manchester United</p>
-              </div>
-              <div class="status">
-                  <p>Now</p>
-              </div>
-          </div>
-          <div class="media-title">
-            <h3>Other Matches</h3>
-          </div>
-          <div class="media">
-              <img class="d-flex align-self-start rounded" src="https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Generic placeholder image">
-                <div class="team">
-                    <p>Chelsea</p>
-                    <p> Manchester United</p>
-                </div>
-                <div class="status">
-                    <p>Now</p>
-                </div>
+      <div class="col-lg-12 my-auto onboarding-panel rounded">
+          <h3>CREATE NEW ROOM</h3>
+        <div class="media2" style="margin-top: 16px">
+            <label for="videoLink">Drop a YouTube link of any match you want to watch together</label>
+            <div class="input-group input-group-lg">
+              <input type="text" class="form-control" id="videoLink" placeholder="e.g.  https://www.youtube.com/watch?v=LQrKsUIlU3A">
             </div>
-            <div class="media">
-                <img class="d-flex align-self-start rounded" src="https://images.pexels.com/photos/186077/pexels-photo-186077.jpeg?h=350&auto=compress&cs=tinysrgb" alt="Generic placeholder image">
-                  <div class="team">
-                      <p>Chelsea</p>
-                      <p> Manchester United</p>
+          </div>
+          <div class="media2">
+              <label for="side">Enter sides</label>
+              <div class="row">
+                <div class="col-lg-6">
+                  <div class="input-group input-group-lg">
+                    <span class="input-group-addon" id="sizing-addon1">Team 1</span>
+                    <input type="text" class="form-control" id="side" placeholder="Chelsea">
                   </div>
-                  <div class="status">
-                      <p>Now</p>
+                </div>
+                <div class="col-lg-6">
+                  <div class="input-group input-group-lg">
+                    <span class="input-group-addon" id="sizing-addon1">Team 2</span>
+                    <input type="text" class="form-control" id="side" placeholder="Manchester United">
                   </div>
+                </div>
               </div>
-              <div class="media-end text-center">
-                <a href="#start" class="btn btn-primary btn-xl">Start Your Own Room</a>
-             </div>
-           </div>
-      <div class="col-lg-7 my-auto">
-        <div class="body-content mx-auto">
-          <h1 class="mb-5">Sports should be enjoyed together!</h1>
-        </div>
-      </div>
+            </div>
+          <div class="media2-end text-center">
+            <a href="#start" class="btn btn-primary btn-lg">Next: Share Link</a>
+         </div>
+       </div>
     </div>
   </div>
     <!-- Bootstrap core JavaScript
